# ai-code-assistant

./: README.md  pyproject.toml
app/: assistant.py
app/model/: config.py  llms.py  prompts.py
app/utils/: format_text.py  get_available_models.py  get_local_time.py
