[tool.poetry]
name = "ai-code-assistant"
version = "0.1.0"
description = ""
authors = ["Mauro Mariniello"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.4.7"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[tool.poetry.scripts]
aia = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


